--- a/index.html
+++ b/index.html
@@ -311,42 +311,42 @@
                 <li class="item">
                     <a class="partner-link" href="">
                         <svg class="partner-icon" width="106" height="60">
-                            <use class="group-11" href="./imges/symbol-defs5.svg#group-11"></use>
+                            <use class="group-11" href="./imges/symbol-defs5.svg#icon-Logo"></use>
                         </svg>
                     </a>
                     </li>
                 <li class="item">
                     <a class="partner-link" href="">
                         <svg class="partner-icon" width="106" height="60">
-                            <use href="./imges/symbol-defs5.svg#group-21"></use>
+                            <use href="./imges/symbol-defs5.svg#icon-Logo-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="item">
                     <a class="partner-link" href="">
                         <svg class="partner-icon" width="106" height="60">
-                            <use href="./imges/symbol-defs5.svg#group-3"></use>
+                            <use href="./imges/symbol-defs5.svg#icon-Logo-2"></use>
                         </svg>
                     </a>  
                 </li>
                 <li class="item">                
                     <a class="partner-link" href="">
                         <svg class="partner-icon" width="106" height="60">
-                        <use href="./imges/symbol-defs5.svg#group-2"></use>
+                        <use href="./imges/symbol-defs5.svg#icon-Logo-3"></use>
                     </svg>
                    </a>          
                 </li>
                 <li class="item"> 
                     <a class="partner-link" href="">
                         <svg class="partner-icon" width="106" height="60">
-                            <use href="./imges/symbol-defs5.svg#group-1"></use>
+                            <use href="./imges/symbol-defs5.svg#icon-Logo-4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="item">
                     <a class="partner-link" href="">
                         <svg class="partner-icon" width="106" height="60">
-                            <use href="./imges/symbol-defs5.svg#group"></use>
+                            <use href="./imges/symbol-defs5.svg#icon-Logo-5"></use>
                         </svg>
                    </a>
                 </li>
@@ -410,11 +410,11 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <batton data-modal-close>
+            <button data-modal-close class="close">
                 <svg class="button-close">
-                    <use href="./imges/symbol-defs5.svg#close-black" ></use>
+                    <use href="./imges/symbol-defs5.svg#icon-Vector" ></use>
                 </svg>
-            </batton>
+            </button>
         </div>
     </div>
     <script src="./js/modal.js"></script>
