--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
 
         <div class="footer-social">
         <h2 class="caption">присоединяйтесь</h2>
-            <ul class="social-icon list">
+            <ul class="social-icon">
         
                 <li class="list-social-icon">
                     <a class="link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram"></a>
-                    <svg class="team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon " width="20" height="20">
                         <use href="./imges/symbol-defs5.svg#instagram"> </use>
                     </svg>
                 </li>
