--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 				</div>
 
 				<div class="footer-social">
-					<h2 class="caption">присоединяйтесь</h2>
+					<p class="caption">присоединяйтесь</p>
 					<ul class="social-icon">
 						<li class="list-social-icon">
 							<a class="link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram"></a>
@@ -516,8 +516,34 @@
 						<use href="./imges/symbol-defs5.svg#icon-Vector"></use>
 					</svg>
 				</button>
+				<form action="form-application">
+					<h2>Оставьте свои данные, мы вам перезвоним</h2>
+					<div class="input">
+					<label for="name">Имя</label>
+					<input type="text" name="name" id="name">
+					<svg>
+						<use></use>
+					</svg>
+					<div class="input">
+					<label for="">Телефон</label>
+					<input type="text">
+					<svg>
+						<use></use>
+					</svg>
+					</div>
+					<div class="input">
+					<label for="">Почта</label>
+					<input type="text">
+					<svg>
+						<use></use>
+					</svg>
+					</div>
+					<textarea name="" id="" cols="30" rows="10">Комментарий</textarea>
+					
+				</form>
 			</div>
 		</div>
+		
 
 		<script src="./js/modal.js"></script>
 
