--- a/index.html
+++ b/index.html
@@ -544,17 +544,33 @@
 					
 					<div class="form-field">
 						<label for="name">Имя</label>
-						<input type="text" name="name" id="name" autofocus />
+						<div class="form-input-icon">
+						<input class="form-input" type="text" name="name" id="name" autofocus />
+						<svg class="form-icon" width="18" height="18">
+							<use href="./imges/symbol-defs5.svg#person-black"></use>
+						</svg>
+						</div>
 					</div>
 
 					<div class="form-field">
 						<label for="tel">Телефон</label>
-						<input type="text" name="tel" id="tel" />
+						<div class="form-input-icon">
+						<input class="form-input" type="text" name="tel" id="tel" />
+						<svg class="form-icon" width="18" height="18">
+							<use href="./imges/symbol-defs5.svg#phone-black"></use>
+						</svg>
+						</div>
+						
 					</div>
 
 					<div class="form-field">
 						<label for="email">Почта</label>
-						<input type="email" name="email" id="email" />
+						<div class="form-input-icon">
+						<input class="form-input" type="email" name="email" id="email" />
+						<svg class="form-icon" width="18" height="18">
+							<use href="./imges/symbol-defs5.svg#email-black"></use>
+						</svg>
+						</div>
 					</div>
 
 					<div class="form-comment">
@@ -564,8 +580,9 @@
 
 
                     <div class="checkbox">
-					<input type="checkbox" name="agry" id="agry" />
 					<label class="chec-agry" for="agry">
+					<input type="checkbox" name="agry" />
+					<span class="chec-icon"></span>
 						Соглашаюсь с рассылкой и принимаю
 						<a class="chec-agry-link" href="">Условия договора</a> 
 					</label>
