--- a/portfolio.html
+++ b/portfolio.html
@@ -252,6 +252,19 @@
                 </ul>
     
             </div>
+            <div class="footer-sign">
+                <strong class="footer-sign-text">Подпишитесь на рассылку</strong>
+                <form class="form-sign">
+                    <label for="mail"></label>
+                    <input type="email" name="mail" id="mail" placeholder="E-mail" />
+            
+                    <button class="footer-button-sign" type="submit" disabled>Подписаться
+                        <svg class="footer-icon-send" width="24" height="24">
+                            <use href="/imges/symbol-defs5.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
